# yolo-darknet

./: .gitignore  README.md  yolov4-scaled-P5.cfg.txt  yolov4_half_channel.cfg  yolov5l_v4.cfg  yolov5m_v4.cfg  yolov5s.cfg
A_improved_darknet/: .gitignore
Build-byHand/Trt-5.0+/: infeRt_class.h
Build-byHand/Trt-5.0+/NetFrame/: CMakeLists.txt  setting.h  utils.h
Build-byHand/Trt-5.0+/NetFrame/Help/: Help_API.h  YOLO_auto_helper.cpp  YOLO_auto_helper.h
Build-byHand/Trt-5.0+/NetFrame/models/: YOLO_auto.cpp  yolov4-tiny.cpp  yolov4.cpp  yolov5.cpp  yolov5sm.cpp  yolov5smpr.cpp  yolov5sms.cpp
Build-byHand/Trt-5.0+/NetFrame/models/darknet/: trt_utils.cpp  yolo.cpp  yolo.h
Build-byHand/Trt-5.0+/Plugin/: CMakeLists.txt  calibrator.h  demo_plugin.cu  demo_plugin.h  yololayer.cu  yololayer.h
Build-byHand/Trt-5.0-/: infeRt_class.h
CameraCD/: CameraCD.pro.user.64b8256
CameraCD/QTVSCD/: CMakeLists.txt  qtvscd.h
CameraCD/QTVSCD/res/: qtvscd.qrc  qtvscd.ui
CameraCD/VS2015/: CameraCD_linux.pro
CameraCD/VS2015/QTVSCD/: main.cpp
CameraCD/cmake/: CMakeLists.txt  CMakeLists_LInux.cmake  CMakeLists_MacOS.cmake  CMakeLists_Win.cmake  README.md  main.cpp  mainwindow-bk.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  names.qrc
CameraCD/cmake/Darknet/: yolo_class.hpp
CameraCD/cmake/Ncnn/: ncnn_class.hpp
CameraCD/cmake/TensorRt/: infeRt_class.h
CameraCD/cmake/TensorRt/Plugin/: calibrator.cpp  calibrator.h  yololayer.h
CameraCD/cmake/TorchScpt/: TorchScpt_class.cpp  TorchScpt_class.h
CameraCD/cmake/darknet/: ._CMakeLists.txt  ._build_xcode  ._run.sh  ._yolo_v2_class.hpp  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  run.sh  yolo_v2_class.hpp
CameraCD/cmake/darknet/model/: yolov3.cfg
Darknet/: CMakeLists.txt  main.cpp  yololayer.h
Torch_v5/: CMakeLists_windows.txt
Torch_v5/LIBTORCH/: CMakeLists.txt  CMakeLists_windows.txt  ReadImage.cpp  XMLProcessor.cpp  main.cpp  main_detect.cpp  main_linux.cpp  main_recog.cpp  run_cmake.bat
YOLO/: yolov3_to_onnx_auto_without_yolo.py
YOLO/yolov4/: CMakeLists.txt  gen_wts.py  yololayer.h  yolov4.cpp  yolov4_kd.cpp  yolov4_p5.cpp  yolov5s_test.cfg
YOLOv4v5-ModelCompression/: convert.py  demo.py  layer_channel_prune.py  layer_channel_regular_prune.py  layer_prune.py  models.py  normal_prune.py  regular_prune.py  shortcut_prune.py  slim_prune.py  train.py
YOLOv4v5-ModelCompression/doc/: README_in_Chinese.md
YOLOv4v5-ModelCompression/model_utils/: README.md  layers.py  models.py
YOLOv4v5-ModelCompression/utils/: prune_utils.py
attention/: README.md
darknet.cfg/cfg/: Gaussian_yolov3_BDD.cfg  alexnet.cfg  cd53paspp-gamma.cfg  cifar.cfg  cifar.test.cfg  coco.data  combine9k.data  crnn.train.cfg  csdarknet53-omega.cfg  cspx-p7-mish-omega.cfg  cspx-p7-mish.cfg  cspx-p7-mish_hp.cfg  csresnext50-panet-spp-original-optimal.cfg  csresnext50-panet-spp.cfg  darknet.cfg  darknet19.cfg  darknet19_448.cfg  darknet53.cfg  darknet53_448_xnor.cfg  densenet201.cfg  efficientnet-lite3.cfg  efficientnet_b0.cfg  enet-coco.cfg  extraction22k.cfg  go.test.cfg  gru.cfg  imagenet1k.data  imagenet22k.dataset  imagenet9k.hierarchy.dataset  jnet-conv.cfg  lstm.train.cfg  openimages.data  resnet101.cfg  resnet152.cfg  resnet152_trident.cfg  resnet50.cfg  resnext152-32x4d.cfg  rnn.cfg  rnn.train.cfg  strided.cfg  (+32 more)
other/: CEM_with_scale.cfg.txt  SAM-to-yolov3.cfg.txt  enetb0-cemsam.cfg.txt  yolo_v3_tiny_pan3_aa_ae_mixup_scale_giou.no.sgdr.txt
other/yolov4-vov/: net.vsd  yolovov-ref.cfg
others/: CEM1.cfg.txt  CEM_with_anchors.cfg.txt  CEM_with_swish.cfg.txt  SAM.cfg  cem.cfg  mobilenet.cfg  yolo_v3_tiny_pan3_aa_ae_mixup_scale_giou.no.sgdr.txt  yolov3-tiny-sam.cfg.txt  yolov4-scaled-P5.cfg.txt
others/vov/: yolovov-fine.cfg  yolovov.cfg
others/yolov4-vov/: yolovov-fine.cfg
pyCameraCD/: MainFrame.py  mainwindownn.py  names.qrc  requirements.txt  runGUI.py  runme.sh
pyCameraCD/data/: allpic_ABSpath.txt  classes.names  path.data  yolov4_0.25.cfg
pyCameraCD/model/: Factory.py  __init__.py
specific_model/: README.md
specific_model/yolov4/: yolov4.cpp
ubuntu1804/: README.md  main.cpp  trt_utils.cpp  trt_utils.h  yolo.cpp  yolo.h  yololayer.cpp  yololayer.cu
ubuntu_project/Yolov4detect-master/: CMakeLists.txt  README.md  main.cpp  yolo_v2_class.hpp  yolov4
v5/LIBTORCH/: CMakeLists_linux.txt  ReadImage.h  XMLProcessor.h  inifile.cpp  inifile.h  myutils.cpp  myutils.h  test.cpp
windows/: Factory.cpp  Factory.hpp  Kernel_Factory.cu  Kernel_Factory.hpp  dark.opensdf  dark.vcxproj  main.cpp  main.hpp  main_set.hpp
windows/cmake_vs/: CMakeLists _all_platform.txt  CMakeLists.txt
windows/cmake_vs/VS2015/: CMakeLists.txt  README.md  logging.h  main.cpp  mish.cu  mish.h  trt_utils.cpp  yolo.h  yololayer.cpp  yololayer.cu  yololayer.h
windows/dark/: dark.sln  dark.vcxproj
windows/extra_lib/: nvinfer.lib  nvonnxparser.lib
yolov3/: README.md  yolov3-quarter-4D.cfg  yolov3_avss.cfg
yolov4/: yolov4-scaled-P5.cfg  yolov4-tiny-spp.cfg  yolov4_half_channel.cfg
yolov4-scaled/: yolov4-quarter-channel.cfg
yolov5/: yolov5_v4_my tiny.cfg  yolov5_v4_tiny.cfg  yolov5l_v4.cfg  yolov5l_v4_NoID.cfg  yolov5m_v4 _NoID.cfg  yolov5m_v4.cfg  yolov5s_old.cfg  yolov5s_v4 _NoID.cfg  yolov5s_v4.cfg  yolov5x_v4.cfg  yolov5x_v4_NoID.cfg
yolov5/ID/: yolov5l_v4.cfg  yolov5m_v4.cfg  yolov5s_v4.cfg
yolov5/VERSION_4/: yolov5l_v4.cfg  yolov5m_v4.cfg  yolov5s_v4.cfg  yolov5x_v4.cfg
yolov5/VERSION_6/: yolov5l.cfg  yolov5m.cfg  yolov5s.cfg  yolov5sm.cfg  yolov5x.cfg
yolov5/cspp/: yolov5s_cspp _NoID.cfg
yolov5/deeper/: yolov5m_v4.cfg
yolov5/fpn/: yolov5m_v4 _fpn.cfg  yolov5s_v4 _NoID.cfg  yolov5s_v4 _fpn.cfg
yolov5/improved/: yolov5l_cspp.cfg  yolov5l_v4_NoID.cfg  yolov5s_cspp.cfg  yolov5x_v4_NoID.cfg
yolov5/spp--cspp/: yolov5m_cspp.cfg  yolov5m_v4 _NoID.cfg  yolov5x_cspp.cfg
yolov5/tiny/: yolov5m_v4.cfg
yolov5/version_2/: yolov5s_v2.cfg
yolov6/: yolov6-v3-deploy.cfg  yolov6-v3.0.cfg.js
yolov7/: yolov7-d6.cfg  yolov7-tiny.cfg  yolov7.cfg  yolov7x.cfg
yolov8/: yolov8l.cfg  yolov8m.cfg  yolov8n.cfg  yolov8s.cfg  yolov8x.cfg
(+108 files in other folders)
